@startuml
!pragma layout smetana
scale 2
hide circle
skinparam classAttributeIconSize 0

class Command {
    --
    + execute(recipe: Recipe, inventory: Inventory): void
    + execute(inventory: Inventory): void
    + getIndex(): int
}

class CookCommand {
    --
    + CookCommand(isExit: boolean, index: int)
    + execute(recipe: Recipe, inventory: Inventory): void
    + getIndex(): int
}

class DeleteIngredientCommand {
    --
    + DeleteIngredientCommand(nameOrIndex: String, quantityToRemove: double)
    + execute(inventory: Inventory): void
}

class IngredientRequirements <<utility>> {
    --
    {static} + aggregateFor(recipe: Recipe): ArrayList<Ingredient>
}

class Recipe {
    --
    + getName(): String
    + getIngredients(): ArrayList<Ingredient>
}

class Inventory {
    --
    + findIndexByName(name: String): int
    + getIngredient(index: int): Ingredient
    + removeIngredient(index: int): void
    + updateQuantity(index: int, quantityToRemove: double): void
}

class Ingredient {
    --
    + getName(): String
    + getQuantity(): double
    + getUnit(): String
}

class Ui {
    --
    {static} + printMessage(message: String): void
    {static} + printError(message: String): void
}

together {
    class CookCommand
    class DeleteIngredientCommand
}

' Inheritance
CookCommand --|> Command
DeleteIngredientCommand --|> Command

' Cook flow dependencies
CookCommand ..> Recipe
CookCommand ..> Inventory
CookCommand ..> IngredientRequirements
CookCommand ..> DeleteIngredientCommand
CookCommand ..> Ui
DeleteIngredientCommand ..> Inventory
DeleteIngredientCommand ..> Ui
IngredientRequirements ..> Recipe

' Data relationships required by cooking
Recipe "1" o-- "*" Ingredient
Inventory "1" o-- "*" Ingredient

@enduml
